# mldem_diameters

./: .env  .gitignore  README.md  pyproject.toml
data_prep/: create_physics.py  dataset_reader_physics.py  physics_data_helper.py  run_me.fish
models/: default_tf.py
train/: evaluate_network.py  fluid_evaluation_helper.py  train_hopperLoss5frames.py  train_it.py
utils/deeplearningutilities/tf/: trainer.py
