[tool.poetry]
name = "mldem-rebuilt"
version = "0.1.0"
description = ""
authors = ["bekzat_ajan"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.7.13"
absl-py = "0.15.0"
addict = "2.4.0"
aiohttp = "3.8.1"
aiosignal = "1.2.0"
anyio = "3.5.0"
argon2-cffi = "21.3.0"
argon2-cffi-bindings = "21.2.0"
astunparse = "1.6.3"
async-timeout = "4.0.2"
asynctest = "0.13.0"
attrs = "21.4.0"
babel = "2.9.1"
argparse = "^1.4.0"
numpy = "1.19.5"
open3d = "0.14.1"
vtk = "9.1.0"
matplotlib = "3.5.1"
zstandard = "0.17.0"
msgpack = "1.0.3"
msgpack-numpy = "0.4.7.1"
mpi4py = "^3.1.5"
setuptools = "62.0.0"
tensorboard = "2.8.0"
tensorboard-data-server = "0.6.1"
tensorboard-plugin-wit = "1.8.1"
tensorflow-estimator = "2.5.0"
ndjson = "0.3.1"
google-cloud-storage = "1.31.2"
google-cloud-secret-manager = "2.0.0"
pycryptodome = "3.9.8"
tensorflow = "2.5.3"
protobuf = "3.20"
python-dotenv = "0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
